Add Roles Endpoints
