# src/content/CleanArchitecture.Maui/src/MobileUi/WebApi/Endpoints/Admin/AccessControl/UpdateConfigurationEndpoint.cs
@@ -3,6 +3,7 @@ using CleanArchitecture.Maui.MobileUi.Shared.AccessControl;
 using CleanArchitecture.Maui.MobileUi.Shared.Authorization;
 using MediatR;
 using Microsoft.AspNetCore.Http.HttpResults;
+using Microsoft.AspNetCore.Mvc;
 
 namespace CleanArchitecture.Maui.MobileUi.WebApi.Endpoints.Admin.AccessControl;
 
@@ -13,11 +14,11 @@ public sealed class UpdateConfigurationEndpoint : IEndpointsDefinition
         app.MapPut("api/Admin/UpdateConfiguration", PutUpdateConfiguration)
             .Produces(StatusCodes.Status204NoContent)
             .RequireAuthorization(Permissions.ConfigureAccessControl)
-            .WithName("GetUpdateConfiguration")
+            .WithName("UpdateConfiguration")
             .WithOpenApi();
     }
 
-    private static async Task<IResult> PutUpdateConfiguration(ISender mediator, RoleDto updatedRole,
+    private static async Task<IResult> PutUpdateConfiguration(ISender mediator, [FromBody] RoleDto updatedRole,
         CancellationToken cancellationToken)
     {
         await mediator.Send(new UpdateAccessControlCommand(updatedRole.Id, updatedRole.Permissions), cancellationToken);
